# rectangle

./: .gitignore  CMakeLists.txt  main.cpp
source/: Config.h
source/characters/: RotatingRectangle.cpp  RotatingRectangle.h
source/utils/: FrameLogger.cpp  FrameLogger.h  Random.cpp  Random.h
